# cloudformation-guard

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  .zprofile  ATTRIBUTION  CONTRIBUTING.md  Cargo.toml  DevContainer.Dockerfile  Dockerfile  Exclude.txt  GRAMMAR.md  LICENSE  Makefile  NOTICE  README.md  _typos.toml  about.hbs  about.toml  action.yml  buildspec.yml  install-guard.ps1  install-guard.sh  mypy.ini  pyproject.toml  requirements-dev.txt  run.sh  rust-toolchain.toml  setup.cfg  template.yaml
cfn-guard/: .gitignore  Cargo.toml  Makefile  README.md
cfn-guard-lambda/: .gitignore  Cargo.toml  Makefile  README.md
cfn-guard-lambda/cdk/: README.md  package-lock.json  package.json
cfn-guard-lambda/cdk/lib/: cdk-stack.ts
cfn-guard-lambda/cdk/test/: cdk.test.ts
cfn-guard-lambda/src/: main.rs
cfn-guard-rulegen/: .gitignore  Cargo.toml  Makefile  README.md
cfn-guard-rulegen-lambda/: .gitignore  Cargo.toml  Makefile  README.md
cfn-guard-rulegen-lambda/cdk/: README.md  cdk.json
cfn-guard-rulegen-lambda/cdk/lib/: cdk-stack.ts
cfn-guard-rulegen-lambda/cdk/test/: cdk.test.ts
cfn-guard-rulegen-lambda/src/: main.rs
cfn-guard-rulegen/src/: lib.rs  main.rs
cfn-guard-rulegen/tests/: functional.rs
cfn-guard/assets/: aws-config-acm-payload.json  aws-config-api-gw-v2-data.json  aws-config-check.g  aws-config-rds-checks-2.g  aws-config-rds-checks.g  aws-dynamodb-config.json  aws-ecs-taskdefinition-config.json  cfn-rules.gr  cfn-sample.json  cfn-syn.cfn  cfn_guard_iam.ruleset  opa-sample.json  rules.gr  s3_data.json  scalars  var_assign_fail_example.g
cfn-guard/cfn/: all-tags-tests.yaml  all-tags.guard  disallows_resource_types.guard  disallows_resource_types_tests.json  disallows_resource_types_tests.yaml  dynamodb_sse.guard  dynamodb_sse_test.yaml  iam_tag_permission_boundary.guard  iam_tag_permission_boundary_tests.json  issue_solutions.guard  issue_solutions.json
cfn-guard/docs/: clause-RFC.md  guard.md  language-syntax.md  query-RFC.md
cfn-guard/opa/: pod_allowlist.guard  pod_allowlist.rego
cfn-guard/src/: guard_types.rs  lib.rs  main.rs  parser.rs  util.rs
cfn-guard/src/commands/: aws_meta_appender.rs  files.rs  helper.rs  migrate.rs  migrate_tests.rs  mod.rs  parse_tree.rs  rulegen.rs  rulegen_tests.rs  test.rs  tracker.rs  validate.rs
cfn-guard/src/migrate/: parser.rs  parser_tests.rs
cfn-guard/src/rules/: errors.rs  evaluate.rs  evaluate_tests.rs  exprs.rs  mod.rs  parser.rs  parser_tests.rs  path_value.rs  path_value_tests.rs  values.rs  values_tests.rs
cfn-guard/tests/: aws-waf-security-automations.template  broken_template_file.json  ebs_volume_rule_set_custom_msg.failing  ebs_volume_rule_set_custom_msg.passing  functional.rs  getatt_template.json  getatt_template.ruleset  getatt_template.yaml  no_resources_template.ruleset  no_resources_template.yaml  parse_lists_with_json_test-template.json  root-wildcard-template.json  stringified-json-template.yaml  test-multiple-resources-conditional-template.yaml  test_do_not_fail_when_type_lacks_property_for_wildcard.ruleset  test_do_not_fail_when_type_lacks_property_for_wildcard.template  test_in_list_fail_custom_message.ruleset  test_not_in_list_fail.ruleset  wildcard-descent-template.yaml  wildcard_action.fail  wildcard_action.pass  wildcard_action.template  wildcard_iam_rule_set.failing  wildcard_iam_rule_set.passing  wildcard_not_in_iam_rule_set.failing  wildcard_rule_end_template_fail.yaml  wildcard_rule_end_template_pass.yaml
guard/: .eslintrc  Cargo.toml  README.md  aws-config.yml  config.json  count_show_summary_fail.out  coverage.sh  jest.config.js  package-lock.json  package.json  test.yaml  tsconfig.json
guard-ffi/: Cargo.toml
guard-ffi/example/: .gitignore  Makefile  cfn_guard.h  cfn_guard_test.c
guard-ffi/src/: errors.rs  lib.rs  types.rs
guard-lambda/: .gitignore  Cargo.toml  README.md  template.yaml
guard-lambda/src/: lib.rs  main.rs
guard-lambda/tests/: lambda-handler.rs
guard-lang/: Cargo.toml
guard-lang/assets/: cfn-lambda.yaml
guard-lang/src/: display.rs  errors.rs  eval.rs  eval_context.rs  eval_context_tests.rs  eval_tests.rs  evaluate.rs  evaluate_tests.rs  exprs.rs  functions.rs  lib.rs  parser.rs  parser_tests.rs  path_value.rs  path_value_tests.rs  values.rs  values_tests.rs
guard-lang/src/eval/: operators.rs  operators_tests.rs
guard-lang/src/functions/: collections.rs  collections_tests.rs  converters.rs  converters_tests.rs  date_time.rs  date_time_tests.rs  strings.rs  strings_tests.rs
guard-lang/src/libyaml/: cstr.rs  event.rs  loader.rs  loader_tests.rs  parser.rs  readme.md  tag.rs  util.rs
guard-lang/src/path_value/: traversal.rs  traversal_tests.rs
guard/assets/: app-defn.yaml  aurora-my-sql-checks.g  aws-config-api-gw-2.g  aws-ecs-config-checks.g  cfn-iam-sg.gr  cfn-lambda.yaml  cfn-template.json  cfn_guard_apig.ruleset  cfn_guard_lambda.ruleset  data.json  ec2-data.json  named_rules.g  opa-rules.gr  opa-sample.json  rules.g
guard/cfn/: iam_rulesset.guard
guard/docs/: clause-RFC.md  guard.md
guard/docs/cloudformation/: examples.md
guard/fuzz/: Cargo.toml  README.md
guard/fuzz/fuzz_targets/: fuzz_guard_dsl.rs  fuzz_run_checks.rs  fuzz_yaml.rs
guard/opa/: pod_allowlist.json  pod_allowlist_test.rego
guard/resources/data-dir/: s3-server-side-encryption-template-compliant.yaml  s3-server-side-encryption-template-non-compliant.yaml  test.yaml
guard/resources/rules-dir/: s3_bucket_server_side_encryption_enabled.guard  test.guard
guard/resources/test-data-dir/: s3_bucket_logging_enabled_tests.json
guard/resources/validate/: comments.guard  db_resource.yaml  (+9 more)
guard/src/: .main.rs.rustfmt  ExternalSourceConfig.toml  ExternalSourceCredential.toml  cache.toml  command.rs  constants.rs  errors.rs  lib.rs  main.rs  util.rs
guard/tests/: functional.rs  migrate.rs  parse_tree.rs  rulegen.rs  test_command.rs  utils.rs  validate.rs
guard/ts-lib/: README.md  guard.d.ts  guard.js  guard_bg.wasm  guard_bg.wasm.d.ts  index.d.ts  index.js  index.ts  package.json  utils.d.ts  utils.js  utils.ts
(+431 files in other folders)
