[package]
name = "cfn-guard-lambda"
version = "1.0.0"
authors = ["Omkar Hegde <omkhegde@amazon.com>", "aws-cloudformation-developers <aws-cloudformation-developers@amazon.com>"]
description = "Lambda version of cfn-guard. Checks AWS CloudFormation templates for policy compliance using a simple, policy-as-code, declarative syntax"
license = "Apache-2.0"
edition = "2018"

[dependencies]
lambda_runtime = "0.2.1"
serde = "1.0.92"
serde_derive = "1.0.92"
simple-error = "0.2.0"
simple_logger = "1.3.0"
log = "0.4.6"
cfn-guard = { version = "0.10.0", path = "../cfn-guard" }
