[package]
name = "cfn-guard-rulegen-lambda"
version = "1.0.0"
edition = "2018"
authors = ["John Tompkins <jotompki@amazon.com>", "aws-cloudformation-developers <aws-cloudformation-developers@amazon.com>"]
description = "Lambda version of cfn-guard-rulegen. Takes a CloudFormation template and autogenerates a set of cfn-guard rules that match the properties of its resources. This is a useful way to get started rule-writing or just create ready-to-use rulesets from known-good templates."
license = "Apache-2.0"
repository = "https://github.com/aws-cloudformation/cloudformation-guard"

[dependencies]
lambda_runtime = "0.2.1"
serde = "1.0.92"
serde_derive = "1.0.92"
simple-error = "0.2.0"
simple_logger = "1.3.0"
log = "0.4.6"
cfn-guard-rulegen = { version = "1.0.0", path = "../cfn-guard-rulegen" }
