[package]
name = "cfn-guard-rulegen"
version = "1.0.0"
edition = "2018"
authors = ["John Tompkins <jotompki@amazon.com>", "aws-cloudformation-developers <aws-cloudformation-developers@amazon.com>"]


[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.9"
log = "0.4.6"
clap = "2.33.0"
simple_logger = "1.3.0"
