[package]
name = "cfn-guard"
version = "0.7.0"
edition = "2018"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.9"
lazy_static = "1.4.0"
log = "0.4.6"
clap = "2.33.0"
simple_logger = "1.3.0"
regex = "1.1.9"
cfn-guard-rulegen = {path = "../cfn-guard-rulegen" }
jni = "0.14"
