[package]
name = "cfn-guard"
version = "1.0.0"
edition = "2018"
authors = ["John Tompkins <jotompki@amazon.com>", "aws-cloudformation-developers <aws-cloudformation-developers@amazon.com>"]
description = "Library for checking AWS CloudFormation templates for policy compliance using a simple, policy-as-code, declarative syntax"
license = "Apache-2.0"
repository = "https://github.com/aws-cloudformation/cloudformation-guard"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.9"
lazy_static = "1.4.0"
log = "0.4.6"
clap = "2.33.0"
simple_logger = "1.3.0"
regex = "1.1.9"
cfn-guard-rulegen = { version = "1.0.0", path = "../cfn-guard-rulegen" }
jni = "0.14"
