[package]
name = "cfn-guard"
version = "0.10.0"
authors = ["diwakar <diwakar@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cfn_guard"
path = "src/lib.rs"

[dependencies]
nom = "5.1.2"
nom_locate = "2.0.0"
indexmap = { version = "1.6.0", features = ["serde-1"] }
regex = "1.3.9"
simple_logger = "1.3.0"
clap = "2.29.0"
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.57"
serde_yaml = "0.8.13"
walkdir = "2.3.1"
colored = "2.0.0"
heck = "0.3.1"
lazy_static = "1.4.0"
itertools = "0.4.7"
string-builder = "0.2.0"

[dependencies.serde_json]
version = "1.0.60"
features = ["preserve_order"]



