[package]
name = "cfn-guard-ffi"
version = "3.1.1"
edition = "2018"
authors = ["Diwakar Chakravarthy", "John Tompkins", "Omkar Hegde", "Priya Padmanaban", "aws-cloudformation-developers <aws-cloudformation-developers@amazon.com>", "Tyler Southwick"]
description = "AWS CloudFormation Guard is an open-source general-purpose policy-as-code evaluation tool. It provides developers with a simple-to-use, yet powerful and expressive domain-specific language (DSL) to define policies and enables developers to validate JSON- or YAML- formatted structured data with those policies."
license = "Apache-2.0"
repository = "https://github.com/aws-cloudformation/cloudformation-guard"
documentation = "https://github.com/aws-cloudformation/cloudformation-guard/blob/main/README.md"
readme = "README.md"
keywords = ["policy-as-code", "guard", "cfn-guard", "security", "compliance"]

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
cfn-guard = { version = "3.1.1", path = "../guard" }
ffi-support = "0.4.4"
