[package]
name = "cfn-guard-lambda"
version = "3.1.2"
authors = ["Diwakar Chakravarthy", "John Tompkins", "Omkar Hegde", "Priya Padmanaban",
    "Bryan Ayala", "Kexiang Wang", "Akshay Rane", "Josh Fried", "aws-cloudformation-developers <aws-cloudformation-developers@amazon.com>"]
description = "Lambda version of cfn-guard. Checks JSON- or YAML- formatted structured data for policy compliance using a simple, policy-as-code, declarative syntax"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/aws-cloudformation/cloudformation-guard"
readme = "README.md"

[dependencies]
lambda_runtime = "0.3.0"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.92"
simple_logger = "4.3.3"
log = "0.4.6"
tokio = "1.24.2"
cfn-guard = { version = "3.1.2", path = "../guard" }
