[package]
name = "cfn-guard"
version = "3.1.0"
edition = "2018"
authors = ["Diwakar Chakravarthy", "John Tompkins", "Omkar Hegde", "Priya Padmanaban",
    "Bryan Ayala", "Kexiang Wang", "Akshay Rane", "Tyler Southwick", "Josh Fried", "aws-cloudformation-developers <aws-cloudformation-developers@amazon.com>"]
description = "AWS CloudFormation Guard is an open-source general-purpose policy-as-code evaluation tool. It provides developers with a simple-to-use, yet powerful and expressive domain-specific language (DSL) to define policies and enables developers to validate JSON- or YAML- formatted structured data with those policies."
license = "Apache-2.0"
repository = "https://github.com/aws-cloudformation/cloudformation-guard"
documentation = "https://github.com/aws-cloudformation/cloudformation-guard/blob/main/README.md"
readme = "README.md"
keywords = ["policy-as-code", "guard", "cfn-guard", "security", "compliance"]

[lib]
name = "cfn_guard"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
nom = "5.1.3"
nom_locate = "2.0.0"
indexmap = { version = "1.6.0", features = ["serde-1"] }
clap_complete = "4.1.2"
clap = { version = "4.5.0", features = ["derive"] }
strip-ansi-escapes = "0.1.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9.10"
walkdir = "2.3.1"
colored = "2.0.0"
heck = "0.3.1"
lazy_static = "1.4.0"
itertools = "0.4.7"
string-builder = "0.2.0"
enumflags2 = "0.7.7"
enumflags2_derive = "0.7.7"
Inflector = "0.11.4"
urlencoding = "2.1.0"
grep-searcher = "0.1.8"
grep-matcher = "0.1.5"
grep-regex = "0.1.9"
unsafe-libyaml = "0.2.10"
rstest = "0.15.0"
fancy-regex = "0.13.0"
indoc = "1.0.8"
thiserror = "1.0.38"
quick-xml = "0.30.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[dependencies.serde_json]
version = "1.0.85"
features = ["preserve_order"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
