[package]
name = "cfn-guard-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
clap = { version = "4.1.4", features = ["derive"] }

[dependencies.cfn-guard]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_yaml"
path = "fuzz_targets/fuzz_yaml.rs"
test = false
doc = false

[[bin]]
name = "fuzz_guard_dsl"
path = "fuzz_targets/fuzz_guard_dsl.rs"
test = false
doc = false
